--- a/index.html
+++ b/index.html
@@ -24,17 +24,24 @@
 
 <body>
 	<script src="./js/script.js"></script>
+	<!-- MESSENGER EXTENSIONS -->
 	<script>
 		(function (d, s, id) {
 			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) { return; }
-			js = d.createElement(s); js.id = id;
+			if (d.getElementById(id)) {
+				return;
+			}
+			js = d.createElement(s);
+			js.id = id;
 			js.src = "https://connect.facebook.net/en_US/messenger.Extensions.js";
 			fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'Messenger'));
 	</script>
 
+	<!--CONTENT-->
+
 	<div id="container">
+
 		<form>
 			<h1 id="header"> Test</h1>
 			<div class="row full-width">
@@ -43,8 +50,11 @@
 			<div class="row full-width">
 				<input type="button" value="Ignite" onClick="test()" id="submit" />
 			</div>
-
 		</form>
+	</div>
+
+	<div class="overlay">
+		<img src='./img/flames.gif' class="flame">
 	</div>
 </body>
 
