Using text area

--- a/rant/animation-test/index.html
+++ b/rant/animation-test/index.html
@@ -18,7 +18,7 @@
 
 		<div id="content">
 			<form id="input-form">
-				<textarea id="rant" placeholder="Rant here...." autofocus rows=50 type="text" name="rant"></textarea>
+				<textarea id="rant" placeholder="Rant here...." autofocus type="text"></textarea>
 				<button type="submit">Done</button>
 			</form>
 		</div>
