--- a/rant/animation-test/index.html
+++ b/rant/animation-test/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<title>Kuini - Rant</title>
 
-		<link rel="stylesheet" href="/styles.css"/>
+		<link rel="stylesheet" href="./styles.css"/>
 
-		<script type="text/javascript" src="/script.js">
+		<script type="text/javascript" src="./script.js">
 		</script>
 
 
