Added back missing elements

--- a/rant/animation-test/index.html
+++ b/rant/animation-test/index.html
@@ -47,7 +47,9 @@
 
 			</div>
 
-
+			<form id="input-form">
+				<textarea id="rant" placeholder="Kōrero mai, type anything!..." autofocus type="text"></textarea>
+			</form>
 
 			<div id="footer-container">
 
@@ -55,6 +57,14 @@
 					<button type="submit">Done</button>
 				</div>
 
+				<div id="footer-description">
+					<p>
+						Click when finished to permanently delete.
+					</p>
+					<p>
+						If you want to save, copy and paste your 'rants' elsewhere
+					</p>
+				</div>
 
 			</div>
 		</div>
