--- a/rant/animation-test/index.html
+++ b/rant/animation-test/index.html
@@ -5,7 +5,7 @@
 		<title>Kuini - Rant</title>
 
 		<link rel="stylesheet" href="./styles.css"/>
-
+		<link rel="stylesheet" href="./animation.css"/>
 		<script type="text/javascript" src="./script.js">
 		</script>
 
@@ -47,26 +47,7 @@
 
 			</div>
 
-			<form id="input-form">
-				<textarea id="rant" placeholder="Kōrero mai, type anything!..." autofocus type="text"></textarea>
-			</form>
 
-			<div id="footer-container">
-
-				<div id=submit-button>
-					<button type="submit">Done</button>
-				</div>
-
-				<div id="footer-description">
-					<p>
-						Click when finished to permanently delete.
-					</p>
-					<p>
-						If you want to save, copy and paste your 'rants' elsewhere
-					</p>
-				</div>
-
-			</div>
 		</div>
 
 	</body>
