--- a/rant/animation-test/index.html
+++ b/rant/animation-test/index.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="./styles.css"/>
 		<link rel="stylesheet" href="./animation.css"/>
+
 		<script type="text/javascript" src="./script.js">
 		</script>
 
@@ -48,6 +49,23 @@
 			</div>
 
 
+
+			<div id="footer-container">
+
+				<div id=submit-button>
+					<button type="submit">Done</button>
+				</div>
+
+				<div id="footer-description">
+					<p>
+						Click when finished to permanently delete.
+					</p>
+					<p>
+						If you want to save, copy and paste your 'rants' elsewhere
+					</p>
+				</div>
+
+			</div>
 		</div>
 
 	</body>
